--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "styled-components": "5.1.0"
+    "styled-components": "5.1.0",
+    "axios": "0.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,6 +40,20 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.14"
+    "@types/styled-components": "^5.1.14",
+    "@typescript-eslint/eslint-plugin": "2.34.0",
+    "@typescript-eslint/parser": "2.34.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-typescript": "6.3.2",
+    "eslint-config-airbnb": "18.2.0",
+    "eslint-config-airbnb-base": "14.2.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-plugin-flowtype": "3.13.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7.18.0",
+    "eslint-plugin-react-hooks": "1.7.0",
+    "prettier": "2.1.1"
   }
 }
