--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "3.4.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "styled-components": "5.1.0",
-    "axios": "0.19.0"
+    "axios": "0.19.0",
+    "antd": "4.6.6"
   },
   "scripts": {
     "start": "react-scripts start",
