--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "web-vitals": "^1.0.1",
     "styled-components": "5.1.0",
     "axios": "0.19.0",
-    "antd": "4.6.6"
+    "antd": "4.6.6",
+    "@ant-design/icons": "4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
